--- a/.classpath
+++ b/.classpath
@@ -46,5 +46,15 @@
 			<attribute name="maven.scope" value="compile"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/Users/ankitasachdeva/.m2/repository/com/github/javafaker/javafaker/1.0.2/javafaker-1.0.2.jar" sourcepath="/Users/ankitasachdeva/.m2/repository/com/github/javafaker/javafaker/1.0.2/javafaker-1.0.2-sources.jar">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="javadoc_location" value="jar:file:/Users/ankitasachdeva/.m2/repository/com/github/javafaker/javafaker/1.0.2/javafaker-1.0.2-javadoc.jar!/"/>
+			<attribute name="maven.groupId" value="com.github.javafaker"/>
+			<attribute name="maven.artifactId" value="javafaker"/>
+			<attribute name="maven.version" value="1.0.2"/>
+			<attribute name="maven.scope" value="compile"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
